# rez_cmake_test

./: README.md
test_cmake_engine/: CMakeLists.txt  README.md  package.py
test_cmake_engine/src/: CMakeLists.txt
test_cmake_engine/src/cmake/: TestEngineConfig.cmake  export_targets.cmake
test_cmake_engine/src/include/test_engine/: engine.h
test_cmake_engine/src/lib/: engine.cpp
test_cmake_project/: CMakeLists.txt  package.py
test_cmake_project/src/: CMakeLists.txt  main.cpp
